pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: apache-pod
spec:
  containers:
  - name: apache-docker
    image: httpd:2.4
  nodeName: fargate-ip-10-0-54-82.ec2.internal
