services.yml
apiVersion: v1
kind: Service
metadata:
  name: apache 
spec:
  type: NodePort
  ports:
  - port: 80 
    targetPort: 80
    nodePort: 30000
  selector:
    role: apache
